# gym-track-angular/src/app/services/models/exercise-request.ts
@@ -1,6 +1,6 @@
 /* tslint:disable */
 /* eslint-disable */
 export interface ExerciseRequest {
-  exerciseType: 'CHEST' | 'BACK' | 'BICEPS' | 'SHOULDERS' | 'TRICEPS' | 'FOREARM' | 'ABS' | 'GLUTES' | 'CALF' | 'THIGH' | 'HAMSTRINGS';
+  exerciseType: 'CHEST' | 'SHOULDERS' | 'BICEPS' | 'TRICEPS' | 'FOREARM' | 'TRAPS' | 'LATS' | 'MIDDLE_BACK' | 'LOW_BACK' | 'ABS' | 'QUADRICEPS' | 'GLUTES' | 'ABDUCTORS' | 'ADDUCTORS' | 'HAMSTRINGS' | 'CALF';
   name: string;
 }
